Fix some styling issues causing the page to be too long

--- a/frontend/src/mainframe/mainframe.module.css
+++ b/frontend/src/mainframe/mainframe.module.css
@@ -25,4 +25,12 @@
 
 .container {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.pageBody {
+    width: 100%;
+    overflow: hidden;
+    
 }
